# MechET

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: overfit32.yaml  sft_pilot.yaml
data/: README.md
data/samples/: valid_mini.jsonl
scripts/: build_mechet_sft.py  eval_mechet.py  train_mechet_sft.py  visualize_mechet_cot.py
src/mechet/: __init__.py  chat_template.py  collator.py  mech_et.py  mech_graph.py  model.py  sft.py  tokenizer.py  verifier.py
tests/: test_mech_et.py
