[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechet"
version = "0.1.0"
description = "MechET: Mechanism Electron-Transfer CoT for retrosynthesis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wangyu-sd" }]
dependencies = [
  "rdkit",
  "numpy",
]

[project.optional-dependencies]
train = [
  "torch",
  "transformers",
  "peft",
  "datasets",
  "accelerate",
  "bitsandbytes",
  "pyyaml",
]
dev = [
  "pytest",
  "mechet[train]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
